buildscript {
    repositories {
        maven { url = 'https://files.minecraftforge.net/maven' }
        maven { url = 'https://maven.parchmentmc.org' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath group: 'org.parchmentmc', name: 'librarian', version: '1.+'
    }
}

apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'

apply from: 'gradle/teacon-forge.gradle'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

// definitions at gradle/teacon-forge.gradle
teacon {
    modId = 'voteme'
    modVersion = '0.6.0'
    modLicense = 'BSD-3-Clause'
    modGitHubRepo = 'teaconmc/VoteMe'
    modAuthors = ['yuriscat (Yuri\'s Cat)', '3TUSK', 'ustc-zzzz']
    modDescription = 'Minecraft mod for in-game voting.'

    platform = 'forge-1.18.2-40.1.19'
    parchment = '2022.05.22'

    // uncomment these lines if you need
    modName = 'Vote Me' // default to repo name
    // modGitHubBranch = 1.18-forge // for referring the license
    // modifyMemberAccess = true // for access transformer
    // useDataGeneration = true // for data generation
    // publishTask = jar // for shadow jar or other usages
    // lazyTokens = ['minecraft_classpath': { project.configurations.shadow.asPath }] // for runtime tokens

    // use './gradlew -q printModMeta > src/main/resources/META-INF/mods.toml' to generate mod meta
}
